# GPU_Aho

./: README.md
DNABiometrics/: CMakeLists.txt
DNABiometrics/include/: base.hpp  vector_builder.hpp
DNABiometrics/src/: cpu.cpp  cuda.cu  opencl.cpp  opencl_kernel.cl  sycl.cpp  vector_builder.cpp
DigitalForensics/: CMakeLists.txt  build.sh
DigitalForensics/include/: read_helper.hpp  vector_builder.hpp
DigitalForensics/src/: base.cpp  cpu.cpp  cuda.cu  opencl.cpp  opencl_kernel.cl  read_helper.cpp  sycl.cpp  vector_builder.cpp
